# word2word-audio

./: README.md  pyproject.toml
asr/: asr-exp.ipynb
audio-synthesis/: google_tts.py  synthesis-client--gcp-raw-v2.py  synthesis-client--gcp-raw.py  synthesis-client.py  synthesis-rvc.py
inference/: google_translate_v3.py  requirements.txt  seq2seq.py  wav2vec2-batch.py  wav2vec2.py
pip-no-poetry/: requirements.txt
text-synthesis/: google_stt--long.py  google_stt.py  google_translate_v3.py  requirements.txt  wav2vec2-batch.py
tools/: diarizer.py  gdrive-model-uploader.py  merge-audio-gpu.py  merge-audio.py
