[tool.poetry]
name = "word2word-audio"
version = "0.1.0"
description = ""
authors = ["Muhammad Rafid Amrullah <rafid.tijarah@gmail.com>"]
readme = "README.md"
packages = [{include = "word2word-audio"}]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
transformers = "^4.44.2"
datasets = "^2.21.0"
evaluate = "^0.4.2"
accelerate = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
